# TQQQ-ML-trend

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: run_full_pipeline.py
src/tqqq_ml_trend/: __init__.py  cli.py  config.py
src/tqqq_ml_trend/features/: __init__.py  technical.py
src/tqqq_ml_trend/models/: regressors.py  tensorflow_regressor.py  torch_regressor.py
src/tqqq_ml_trend/pipeline/: forecast.py  train.py
src/tqqq_ml_trend/utils/: dates.py
