[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tqqq-ml-trend"
version = "0.1.0"
description = "Framework for modelling and forecasting TQQQ trends with machine learning"
authors = [{name = "TQQQ Analysts"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.1",
    "scikit-learn>=1.3",
    "yfinance>=0.2.36",
]

[project.optional-dependencies]
torch = ["torch>=2.1"]
tensorflow = ["tensorflow>=2.14"]

[project.urls]
Homepage = "https://example.com/tqqq-ml-trend"

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools.packages.find]
where = ["src"]
